force-app/main/default/objects/Sales_Invoice__c/Sales_Invoice__c.object-meta.xml
<CustomObject>
    <label>Sales Invoice</label>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>Sales Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>