force-app/main/default/objects/Sales_Invoice__c/fields/Invoice_For__c.field-meta.xml
<CustomField>
    <fullName>Invoice_For__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice For</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Invoices</relationshipLabel>
    <relationshipName>Sales_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>