force-app/main/default/objects/Sales_Invoice__c/fields/Number_of_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Products__c</fullName>
    <label>Number of Products</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>